gcc/testsuite/rust/compile/generics13.rs
struct Foo<A, 'a>; // { dg-error "invalid order for generic parameters: lifetimes should always come before types" }
